gf_submitForm/main/default/objects/Dynamic_Form_Section_Component__mdt/Dynamic_Form_Section_Component__mdt.object-meta.xml
<CustomObject>
    <description>Rendered component within related section.</description>
    <label>Dynamic Form Section Component</label>
    <pluralLabel>Dynamic Form Section Components</pluralLabel>
</CustomObject>