gf_submitForm/main/default/objects/Dynamic_Form_Section_Component__mdt/fields/Dynamic_Form_Section__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Form_Section__c</fullName>
    <label>Dynamic Form Section</label>
    <referenceTo>Dynamic_Form_Section__mdt</referenceTo>
    <relationshipLabel>Dynamic Form Section Components</relationshipLabel>
    <relationshipName>Dynamic_Form_Section_Components</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>