gf_submitForm/main/default/objects/Dynamic_Form_Section_Component__mdt/fields/Is_Rendered__c.field-meta.xml
<CustomField>
    <fullName>Is_Rendered__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Rendered?</label>
    <type>Checkbox</type>
</CustomField>