gf_submitForm/main/default/objects/Dynamic_Form_Section_Component__mdt/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <label>sObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Dynamic_Form_Section_Components</relationshipLabel>
    <relationshipName>Dynamic_Form_Section_Components</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>