gf_submitForm/main/default/objects/Dynamic_Form_Section_Component__mdt/fields/sObject_Field__c.field-meta.xml
<CustomField>
    <fullName>sObject_Field__c</fullName>
    <label>sObject Field</label>
    <metadataRelationshipControllingField>Dynamic_Form_Section_Component__mdt.sObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Dynamic_Form_Section_Components</relationshipLabel>
    <relationshipName>Dynamic_Form_Section_Components</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>